# plus-ev-model

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: validation_report.txt
data/orange/: assists.tab  points.tab  rebounds.tab  threes.tab
docs/: deveg.md  how_to_get_nba_player_props_odds.md  methodology.md  odds_api_bookmakers.md  plus_ev_betting_calculations.md  proposed_improvements.md  setup.md  technical_requirements.md
examples/: odds_api_example.py
mlruns/0/: meta.yaml
mlruns/690883526697893037/: meta.yaml
mlruns/690883526697893037/18c6c445f55047ea8908502e65578a83/: meta.yaml
mlruns/690883526697893037/18c6c445f55047ea8908502e65578a83/metrics/: importance_fg3_pct_rolling_10  importance_fg3_pct_rolling_20  importance_fg3_pct_rolling_5  importance_fg_pct_rolling_10  importance_fg_pct_rolling_20  importance_fg_pct_rolling_5  importance_ft_pct_rolling_10  importance_ft_pct_rolling_20  importance_ft_pct_rolling_5  importance_is_home  importance_min  importance_opp_pts_allowed_avg  importance_plus_minus_rolling_10  importance_plus_minus_rolling_20  importance_plus_minus_rolling_5  mae  r2  (+6 more)
mlruns/690883526697893037/7698ea80f0af42409764bbb9fe03ba25/: meta.yaml
mlruns/690883526697893037/fce3fa725c7c4087bf16c44c17c1c67e/: meta.yaml
models/assists/: metadata.json
models/points/: metadata.json
models/rebounds/: metadata.json
models/threes/: metadata.json
src/: __init__.py
src/core/: __init__.py  devig.py  edge_calculator.py  monte_carlo.py
src/data/: __init__.py  add_fg3m_column.py  add_rolling_windows.py  analyze_player_stats.py  check_motherduck.py  db_config.py  fix_fg3m_calculation.py  fix_player_stats_teams.py  fix_value_calculations.py  get_player_ids.py  inspect_databases.py  nba_stats.py  nba_stats_async.py  nba_stats_career.py  nba_stats_simple.py  odds_api.py  odds_api_client.py  sync_db.py  sync_player_stats.py  sync_players.py  sync_shot_locations.py
src/gui/: __init__.py  prop_edge_viewer.py
src/models/: __init__.py  analyze_orange_results.py  analyze_props.py  assist_prediction.py  enhanced_props_model.py  ensemble_scorer_model.py  extended_ensemble_model.py  find_prop_edges.py  h2o_props_model.py  model_manager.py  orange_workflow.py  player_props_model.py  predict_assists.py  predict_props.py  prop_bet_analyzer.py  prop_features_config.py  test_h2o_model.py  test_predictions.py  test_prop_analyzer.py  validate_and_improve.py
src/web/: app.py
src/web/templates/: base.html  edges.html  error.html  index.html  props.html
tests/core/: test_devig.py  test_monte_carlo.py
tests/data/: test_nba_api.py  test_odds_api.py  test_odds_api_client.py
tests/models/: test_assist_prediction.py  test_extended_ensemble.py
(+4 files in other folders)
